[gd_scene load_steps=3 format=3 uid="uid://bd3o63y7mctql"]

[ext_resource type="Texture2D" uid="uid://duei3tak66hnm" path="res://art/gameover.png" id="1_0liai"]
[ext_resource type="Script" path="res://ui.gd" id="1_jiffm"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_jiffm")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = -1.0
offset_top = 3.0
offset_right = 1000.0
offset_bottom = 192.0

[node name="Points" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "0"

[node name="HighScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "High Score:"

[node name="HighScorePoints" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "0"

[node name="GameOverBox" type="BoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="GameOver" type="TextureRect" parent="MarginContainer/GameOverBox"]
layout_mode = 2
texture = ExtResource("1_0liai")

[node name="Panel" type="Panel" parent="MarginContainer/GameOverBox"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/GameOverBox/Panel"]
layout_mode = 2
offset_left = -148.0
offset_top = 51.0
offset_right = -44.0
offset_bottom = 101.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Replay"

[connection signal="pressed" from="MarginContainer/GameOverBox/Panel/Button" to="." method="_on_button_pressed"]
