[gd_scene load_steps=5 format=3 uid="uid://xy1ebmhqpsmo"]

[ext_resource type="Script" path="res://ui.gd" id="1_5wnat"]
[ext_resource type="Texture2D" uid="uid://cku2uvuxjdf80" path="res://art/lettuce_small.png" id="1_f8i23"]
[ext_resource type="Texture2D" uid="uid://c5lf6hcgdekg3" path="res://art/game_over.png" id="2_g0unm"]

[sub_resource type="GDScript" id="GDScript_rjoxw"]
script/source = "extends GridContainer

@onready var points = $\"../Points\"
@onready var high_score = $\"../HighScore\"
@onready var life_1 = $\"../GridContainer/Life1\"
@onready var life_3 = $\"../GridContainer/Life3\"
@onready var box_container = $\".\"

	
func update_points(pts: int):
	points.text = \"%d\" % pts
	
func update_high_score(pts: int):
	high_score.text = \"High Score: %d\" % pts
	
func on_game_over():
	box_container.visible = true
	
func _on_button_pressed():
	get_tree().reload_current_scene()	
"

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_5wnat")

[node name="Points" type="Label" parent="."]
offset_left = 549.0
offset_top = 1.0
offset_right = 589.0
offset_bottom = 24.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "0"

[node name="HighScore" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 40
text = "High Score: 0"

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 783.0
offset_top = 3.0
offset_right = 1091.0
offset_bottom = 103.0
columns = 3

[node name="Life1" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("1_f8i23")

[node name="Life2" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("1_f8i23")

[node name="Life3" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("1_f8i23")

[node name="BoxContainer" type="GridContainer" parent="."]
visible = false
offset_left = 473.0
offset_top = 176.0
offset_right = 673.0
offset_bottom = 380.0
script = SubResource("GDScript_rjoxw")

[node name="TextureRect" type="TextureRect" parent="BoxContainer"]
layout_mode = 2
texture = ExtResource("2_g0unm")

[node name="Panel" type="Panel" parent="BoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="BoxContainer/Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 6.0
offset_right = 155.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 30
text = "Re-start"
